--- a/amor.html
+++ b/amor.html
@@ -19,7 +19,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Atraer el Amor</h3>
         <p class="card-description">Descubre cómo abrir tu corazón y atraer el amor verdadero a tu vida.</p>
-        <a href="ritual-atraer-amor.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -29,7 +29,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Fortalecer la Relación</h3>
         <p class="card-description">Reaviva la conexión emocional y refuerza los lazos con tu pareja.</p>
-        <a href="ritual-fortalecer-relacion.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -39,7 +39,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual de Amor Propio</h3>
         <p class="card-description">Aprende a valorarte y a cultivar un amor profundo por ti mismo.</p>
-        <a href="ritual-amor-propio.html" class="card-link">¡Recibir Ayuda!</a>
+        <a hhref="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -49,7 +49,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Sanar Heridas Emocionales</h3>
         <p class="card-description">Libera el pasado y permite que el amor vuelva a florecer en tu vida.</p>
-        <a href="ritual-sanar-heridas.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
   </main>
