--- a/lecturas.html
+++ b/lecturas.html
@@ -19,7 +19,7 @@
       <div class="card-content">
         <h3 class="card-title">Lectura de Cartas para la Sanación Emocional</h3>
         <p class="card-description">Conéctate con tu ser interior y recibe orientación para sanar tu corazón y mente.</p>
-        <a href="lectura-sanacion-emocional.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank"class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -29,7 +29,7 @@
       <div class="card-content">
         <h3 class="card-title">Lectura Psíquica para Encontrar el Camino Correcto</h3>
         <p class="card-description">Descubre las respuestas a tus preguntas y recibe guía para tomar decisiones clave en tu vida.</p>
-        <a href="lectura-camino-correcto.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -39,7 +39,7 @@
       <div class="card-content">
         <h3 class="card-title">Lectura de Cartas para el Amor y las Relaciones</h3>
         <p class="card-description">Explora el futuro de tu vida amorosa y recibe consejo sobre tus relaciones personales.</p>
-        <a href="lectura-amor-relaciones.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -49,7 +49,7 @@
       <div class="card-content">
         <h3 class="card-title">Lectura Psíquica para la Paz Interior</h3>
         <p class="card-description">Conoce tu energía y aprende a equilibrar tu mente y cuerpo para lograr paz interna.</p>
-        <a href="lectura-paz-interior.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank"class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
   </main>
