--- a/salud.html
+++ b/salud.html
@@ -19,7 +19,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para la Sanación Física</h3>
         <p class="card-description">Conéctate con la energía de la salud para acelerar tu recuperación y fortalecer tu cuerpo.</p>
-        <a href="ritual-sanacion-fisica.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -29,7 +29,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Fortalecer el Sistema Inmune</h3>
         <p class="card-description">Aprende cómo protegerte de enfermedades y mantener tu cuerpo en equilibrio.</p>
-        <a href="ritual-fortalecer-inmune.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -39,7 +39,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para la Paz Mental</h3>
         <p class="card-description">Reduce el estrés y cultiva la serenidad a través de prácticas energéticas sencillas.</p>
-        <a href="ritual-paz-mental.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -49,7 +49,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Equilibrar la Energía</h3>
         <p class="card-description">Armoniza tu cuerpo y mente para alcanzar un estado de bienestar integral.</p>
-        <a href="ritual-equilibrar-energia.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
   </main>
