--- a/dinero.html
+++ b/dinero.html
@@ -19,7 +19,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Atraer Dinero</h3>
         <p class="card-description">Descubre cómo atraer la energía del dinero y mejorar tu economía personal.</p>
-        <a href="ritual-atraer-dinero.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -29,7 +29,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Multiplicar Ingresos</h3>
         <p class="card-description">Conoce prácticas efectivas para potenciar y multiplicar tus fuentes de ingresos.</p>
-        <a href="ritual-multiplicar-ingresos.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -39,7 +39,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Desbloquear la Prosperidad</h3>
         <p class="card-description">Rompe barreras energéticas y abre las puertas a la abundancia en tu vida.</p>
-        <a href="ritual-desbloquear-prosperidad.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
 
@@ -49,7 +49,7 @@
       <div class="card-content">
         <h3 class="card-title">Ritual para Eliminar Deudas</h3>
         <p class="card-description">Libérate del peso de las deudas con este ritual de limpieza y equilibrio financiero.</p>
-        <a href="ritual-eliminar-deudas.html" class="card-link">¡Recibir Ayuda!</a>
+        <a href="https://wa.me/573001234567" target="_blank" class="card-link">¡Recibir Ayuda!</a>
       </div>
     </article>
   </main>
